Make repository more portable to other people.

--- a/.github/workflows/twitter.yml
+++ b/.github/workflows/twitter.yml
@@ -1,8 +1,9 @@
 name: Fetch and Save Twitter Followers and Friends
 
 on:
-  deployment:
-    types: []
+  push:
+    branches:
+      - code
   schedule:
     - cron: '0 * * * *'
 
